log
Fri Mar 27 05:35:00 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
5f5bf04
Fri Mar 27 05:45:29 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   79 |     Nodo* nuevoNodo = createNode(data);
      |     ^~~~
      |     Node
list.c:79:23: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   79 |     Nodo* nuevoNodo = createNode(data);
      |                       ^~~~~~~~~~
list.c:80:14: error: request for member ‘next’ in something not a structure or union
   80 |     nuevoNodo->next = list->current->next;
      |              ^~
list.c:81:25: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   81 |     list->current->next = nuevoNodo;
      |                         ^
list.c:82:14: error: request for member ‘next’ in something not a structure or union
   82 |     nuevoNodo->next->prev = nuevoNodo;
      |              ^~
list.c:83:14: error: request for member ‘prev’ in something not a structure or union
   83 |     nuevoNodo->prev = list->current;
      |              ^~
0ca0673
Fri Mar 27 05:46:10 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0ca0673
Fri Mar 27 05:55:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54b27d8
Fri Mar 27 06:00:36 PM UTC 2026: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:18: error: expected expression before ‘List’
   39 |     nuevaLista = List* malloc(List);
      |                  ^~~~
list.c: In function ‘pushCurrent’:
list.c:85:11: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   85 |     Node* nuevoNodo = createNode(data);
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
8e01464
Fri Mar 27 06:01:20 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:37: error: expected expression before ‘List’
   38 |     List* nuevaLista=(List*) malloc(List);
      |                                     ^~~~
list.c: In function ‘pushCurrent’:
list.c:84:11: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   84 |     Node* nuevoNodo = createNode(data);
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
5ac7570
Fri Mar 27 06:01:44 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:33: error: expected expression before ‘List’
   39 |     nuevaLista = (List*) malloc(List);
      |                                 ^~~~
list.c: In function ‘pushCurrent’:
list.c:85:11: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   85 |     Node* nuevoNodo = createNode(data);
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
4880cab
Fri Mar 27 06:01:57 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:85:11: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   85 |     Node* nuevoNodo = createNode(data);
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
a0eb5f7
Fri Mar 27 06:02:51 PM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/60
347928d
Fri Mar 27 06:03:29 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
d3bf5ba
Fri Mar 27 06:03:55 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
ecde61e
Fri Mar 27 06:05:39 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1934b8f
Fri Mar 27 06:06:32 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e52c2cd
Fri Mar 27 06:07:32 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:53:12: error: dereferencing ‘void *’ pointer [-Werror]
   53 |     return *dato;
      |            ^~~~~
list.c:53:12: error: void value not ignored as it ought to be
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
9abf748
Fri Mar 27 06:09:15 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7fa651d
Fri Mar 27 06:10:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:53:5: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   53 |     return;
      |     ^~~~~~
list.c:50:8: note: declared here
   50 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c:52:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   52 |     void* dato = list->head->data;
      |           ^~~~
cc1: all warnings being treated as errors
c4ed039
Fri Mar 27 06:12:17 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
947014f
Fri Mar 27 06:13:53 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
23e373a
Fri Mar 27 06:19:11 PM UTC 2026: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:82:5: error: ‘newNode’ undeclared (first use in this function); did you mean ‘Node’?
   82 |     newNode = createNode(data);
      |     ^~~~~~~
      |     Node
list.c:82:5: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
list.c: In function ‘nextList’:
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
2989e46
Fri Mar 27 06:19:23 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
list.c: In function ‘nextList’:
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
cd52d68
Fri Mar 27 06:19:59 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
7e5d84c
Fri Mar 27 06:26:49 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
865cdc1
Fri Mar 27 06:28:29 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:19: error: implicit declaration of function ‘eturn’ [-Wimplicit-function-declaration]
   52 |     if(list->head)eturn(list->current->key);
      |                   ^~~~~
list.c:52:38: error: ‘Node’ has no member named ‘key’
   52 |     if(list->head)eturn(list->current->key);
      |                                      ^~
a840711
Fri Mar 27 06:28:43 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:39: error: ‘Node’ has no member named ‘key’
   52 |     if(list->head)return(list->current->key);
      |                                       ^~
1b4da66
Fri Mar 27 06:28:56 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dd73bf6
Fri Mar 27 06:29:49 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:5: error: statement with no effect [-Werror=unused-value]
   57 |     list
      |     ^~~~
list.c:57:9: error: expected ‘;’ before ‘return’
   57 |     list
      |         ^
      |         ;
   58 |     return NULL;
      |     ~~~~~~
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
30ce982
Fri Mar 27 06:30:16 PM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
4704507
Fri Mar 27 06:31:31 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:13: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   57 |     if(!list->next)return NULL;
      |             ^~
38d6714
Fri Mar 27 06:31:51 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
87b9fc2
Fri Mar 27 06:32:09 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e9df3c7
Fri Mar 27 06:33:10 PM UTC 2026: 
 tests:  0|0
a5b77ac
Fri Mar 27 06:33:12 PM UTC 2026: 
 tests:  0|0
f85044a
Fri Mar 27 06:33:14 PM UTC 2026: 
 tests:  0|0
c12b197
Fri Mar 27 06:44:51 PM UTC 2026: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
ec6031b
Fri Mar 27 06:45:20 PM UTC 2026: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|4
total_score: 25/60
a968c25
